--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Haraprosad",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.2.2"
   }
 }
